--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,17 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.ufo.smartokhttputilsproject.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/async_get1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
-</RelativeLayout>
+        android:text="异步GET请求"/>
+
+    <Button
+        android:id="@+id/async_get2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="异步GET请求带参数"/>
+
+    <Button
+        android:id="@+id/async_post1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="异步POST请求"/>
+
+    <Button
+        android:id="@+id/async_post2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="异步POST请求带参数"/>
+    <Button
+        android:id="@+id/async_download"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="下载"/>
+    <Button
+        android:id="@+id/async_upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="上传"/>
+    <Button
+        android:id="@+id/async_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="取消所有请求"/>
+
+
+</LinearLayout>
